--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,8 +14,8 @@
 }
 
 body {
-  background-color: white;
-  color: black;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 a {
