--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,3 +80,72 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* fondo estrellas */
+
+#space, .stars {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.stars {
+  background-image: 
+    radial-gradient(1px 1px at 10px 15px, #eeeeee4f, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 20px 35px, #ffffffb4, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 25px 80px, #ddd, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 45px 20px, #ffffff98, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 65px 40px, #fff, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 0.5px 60px, #ddd, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 70px 100px, #eeeeee4f, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 90px 130px, #ffffffb4, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 110px 160px, #ddd, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 130px 190px, #ffffff98, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 150px 220px, #fff, rgba(0,0,0,0)),
+    radial-gradient(1px 1px at 170px 250px, #ddd, rgba(0,0,0,0));
+  background-repeat: repeat;
+  background-size: 200px 200px;
+  animation: zoom 8s infinite;
+  opacity: 0;
+}
+
+.stars:nth-child(1) {
+  background-position: 50% 50%;
+  animation-delay: 0s;
+}
+.stars:nth-child(2) {
+  background-position: 20% 60%;
+  animation-delay: 1s;
+}
+.stars:nth-child(3) {
+  background-position: -20% -30%;
+  animation-delay: 2s;
+}
+.stars:nth-child(4) {
+  background-position: 40% -80%;
+  animation-delay: 3s;
+}
+.stars:nth-child(5) {
+  background-position: -20% 30%;
+  animation-delay: 4s;
+}
+
+@keyframes zoom {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+    animation-timing-function: ease-in;
+  } 
+  85% {
+    opacity: 1;
+    transform: scale(2.8);
+    animation-timing-function: linear;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(3.5);
+  }
+}
