--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: dark dark;
+  color: rgb(0, 0, 0);
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,9 +14,11 @@
 }
 
 body {
-  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 0, 0); */
   color: rgb(255, 255, 255);
   margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 a {
@@ -26,12 +28,6 @@ a {
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -44,10 +40,11 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  /* text-align: center; */
+  width: 100%;
+  /* max-width: 1366px; */
+  margin: 0;
+  padding: 0;
+  background-color: #000000;
 }
 
 button {
@@ -69,7 +66,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -82,71 +79,3 @@ button:focus-visible {
   }
 }
 
-/* fondo estrellas */
-
-#space, .stars {
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.stars {
-  background-image: 
-    radial-gradient(1px 1px at 10px 15px, #eeeeee4f, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 20px 35px, #ffffffb4, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 25px 80px, #ddd, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 45px 20px, #ffffff98, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 65px 40px, #fff, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 0.5px 60px, #ddd, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 70px 100px, #eeeeee4f, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 90px 130px, #ffffffb4, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 110px 160px, #ddd, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 130px 190px, #ffffff98, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 150px 220px, #fff, rgba(0,0,0,0)),
-    radial-gradient(1px 1px at 170px 250px, #ddd, rgba(0,0,0,0));
-  background-repeat: repeat;
-  background-size: 200px 200px;
-  animation: zoom 8s infinite;
-  opacity: 0;
-}
-
-.stars:nth-child(1) {
-  background-position: 50% 50%;
-  animation-delay: 0s;
-}
-.stars:nth-child(2) {
-  background-position: 20% 60%;
-  animation-delay: 1s;
-}
-.stars:nth-child(3) {
-  background-position: -20% -30%;
-  animation-delay: 2s;
-}
-.stars:nth-child(4) {
-  background-position: 40% -80%;
-  animation-delay: 3s;
-}
-.stars:nth-child(5) {
-  background-position: -20% 30%;
-  animation-delay: 4s;
-}
-
-@keyframes zoom {
-  0% {
-    opacity: 0;
-    transform: scale(0.5);
-    animation-timing-function: ease-in;
-  } 
-  85% {
-    opacity: 1;
-    transform: scale(2.8);
-    animation-timing-function: linear;
-  }
-  100% {
-    opacity: 0;
-    transform: scale(3.5);
-  }
-}
